--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^7.1.0",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/lab": "^5.0.0-alpha.127",
+    "@mui/material": "^5.12.1",
     "@svgr/plugin-svgo": "^7.0.0",
     "@svgr/webpack": "^7.0.0",
     "css-select": "^5.1.0",
@@ -24,9 +29,9 @@
     "react-scripts": "5.0.1"
   },
   "scripts": {
-       "start": "craco start",
-       "build": "craco build",
-       "test": "craco test"
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test"
   },
   "eslintConfig": {
     "extends": [
